kubernetes/backend/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-svc
  namespace: backend
spec:
  selector:
    matchLabels:
      app: backend
  ports:
    - name: port-api
      protocol: TCP
      port: 3333
      targetPort: 3333
    - name: port-webdav
      protocol: TCP
      port: 2100
      targetPort: 2100
