kubernetes/backend/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: republikorp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: be-svc
                port:
                  number: port-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dav-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /dav$2
spec:
  ingressClassName: nginx
  rules:
    - host: republikorp.local
      http:
        paths:
          - path: /dav(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: be-svc
                port:
                  number: port-webdav
